Subiendo respaldo de la Base de Datos

--- a/templates/panel.html
+++ b/templates/panel.html
@@ -46,6 +46,7 @@
             <div class="menu-item" onclick="filtrar('basket', this)">🏀 Basket</div>
             <div class="menu-item" onclick="filtrar('tenis', this)">🎾 Tenis</div>
             <div class="menu-item" onclick="filtrar('ufc', this)">🥊 UFC</div>
+            <div class="menu-item" onclick="filtrar('carrera', this)">🏎️ carrera</div>
         </aside>
 
         <main class="content">
